--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -82,6 +82,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 3;
   }
   
   .modal-content {
@@ -92,6 +93,7 @@
     width: 100%;
     position: relative;
     text-align: center;
+    
   }
   
   .modal-img {
